# General-Number-Field-Sieve

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  FUTURE_TASKS.md  README.md  ROADMAP.md  cli.py  default_config.json  firebase.json  pyproject.toml
.github/workflows/: test.yml
book/: manuscript.md
gnfs/: __init__.py  factor.py  linear_algebra.py  sieve.py  square_root.py
gnfs/arith/: __init__.py  bigint.py
gnfs/linalg/: __init__.py  block_lanczos.py  matrix.py  sparse.py
gnfs/polynomial/: __init__.py  number_field.py  polynomial.py  selection.py
gnfs/sieve/: __init__.py  lattice_sieve.py  relation.py  roots.py  sieve.py
gnfs/sqrt/: __init__.py  algebraic_sqrt.py  square_root.py
tests/: conftest.py  test_arith.py  test_block_lanczos.py  test_cli.py  test_factor.py  test_integration.py  test_lattice_sieve.py  test_linalg_math.py  test_linear_algebra.py  test_number_field.py  test_number_field_math.py  test_polynomial.py  test_polynomial_math.py  test_polynomial_selection.py  test_property_based.py  test_sieve.py  test_sieve_math.py  test_sqrt_math.py  test_square_root.py
website/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
website/app/journal/: page.tsx
website/app/learn/: layout.tsx  page.tsx
website/app/playground/: page.tsx
website/components/code/: CodeBlock.tsx  CodePanel.tsx  InteractiveCode.tsx
website/hooks/: usePyodide.ts
website/lib/: pyodide.ts
website/public/: gnfs_notebook.ipynb  pyodide.worker.js
website/scripts/: copy-python.js
(+14 files in other folders)
