[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnfs"
version = "0.1.0"
description = "Simplified General Number Field Sieve demonstration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sympy",
    "numpy"
]

authors = [
    {name = "Example"}
]

[project.scripts]
gnfs = "cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["gnfs*"]
exclude = ["book*", "tests*"]
